ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: green.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: green-service
                port:
                  number: 80
    - host: blue.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: blue-service
                port:
                  number: 80
